mejorando el carrito

--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <li class="nav-item"><a href="#section-contact" class="nav-link">Contacto</a></li>
           </ul>
         </div>
-
+<!-- CARRITO DE PRODUCTOS -->
         <div class="cart-details">
+          
           <span class="close-btn">&times;</span>
           <h4>Carrito de Compras</h4>
           <ul id="cart-items">
@@ -70,9 +71,9 @@
     </nav>
 
 
-
+    <!-- Boton carrito -->
     <div class="carrito">
-      <a href="#" class="cart"><span></span></a>
+      <a href="#" class="cart"><i class="fa-solid fa-cart-shopping"></i><span></span></a>
 
       
     </div>
