--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
           <div class="col-md-12">
             <h1 class="ftco-heading ftco-animate mb-3">Bienvenido al Rinconcito Piurano</h1>
             <h2 class="h5 ftco-subheading mb-5 ftco-animate">Rinconcito Piurano: donde la frescura del mar y la tradición se unen para ofrecerte el mejor ceviche con calidad inigualable.</h2>    
-            <p><a href="https://free-template.co/" target="_blank" class="btn btn-outline-white btn-lg ftco-animate" data-toggle="modal" data-target="#reservationModal">Reservation</a></p>
+            <p><a href="https://free-template.co/" target="_blank" class="btn btn-outline-warning btn-lg ftco-animate boton_reser" data-toggle="modal" data-target="#reservationModal">Reservation</a></p>
           </div>
         </div>
       </div>
