--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 <body data-spy="scroll" data-target="#ftco-navbar" data-offset="200">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
+
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag() {
@@ -87,7 +88,7 @@
         <p class="subtotal">Subtotal: S/. <span id="subtotal">0.00</span></p>
         <!-- Botón de ver detalles centrado -->
         <div class="d-flex justify-content-center pb-4">
-          <a href="pages/detallecarrito.html" class="btn btn-primary">Ver Detalles</a>
+          <a href="pages/detallecarrito.html" class="btn btn-primary" id="detalles_compra">Ver Detalles</a>
         </div>
       </div>
     </div>
@@ -113,7 +114,7 @@
           <p>
             <a href="https://free-template.co/" target="_blank"
               class="btn btn-outline-warning btn-lg ftco-animate boton_reser" data-toggle="modal"
-              data-target="#reservationModal">Reservation</a>
+              data-target="#reservationModal" id="reservaciones">Reservation</a>
           </p>
         </div>
       </div>
