--- a/pages/procederpago.html
+++ b/pages/procederpago.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -7,7 +8,64 @@
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/procederpago.css"> <!-- Estilos personalizados -->
 </head>
+
 <body>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
+
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+
+        gtag("config", "G-VGHCBZG439");
+    </script>
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            // Selecciona el botón de confirmar pedido
+            const botonConfirmar = document.getElementById("confirmar-pedido");
+
+            // Añade el listener para ejecutar finalizarCompra al hacer clic
+            botonConfirmar.addEventListener("click", (e) => {
+                e.preventDefault(); // Evita el comportamiento por defecto del botón
+                finalizarCompra();
+            });
+        });
+
+        function finalizarCompra() {
+            const carrito = JSON.parse(localStorage.getItem("carrito")) || [];
+
+            if (carrito.length === 0) {
+                alert("El carrito está vacío.");
+                return;
+            }
+
+            const transactionId = `T${Date.now()}`; // Genera un ID de transacción único
+            let totalCompra = carrito.reduce((total, producto) => total + producto.precio * producto.cantidad, 0);
+
+            // Envía el evento 'purchase' a Google Analytics
+            gtag('event', 'purchase', {
+                "transaction_id": transactionId,
+                "affiliation": "Mi Tienda de Comidas",
+                "value": totalCompra,
+                "currency": "PEN", // Moneda en soles
+                "items": carrito.map(producto => ({
+                    "id": producto.nombre,
+                    "name": producto.nombre,
+                    "price": producto.precio,
+                    "quantity": producto.cantidad
+                }))
+            });
+
+            // Aquí podrías vaciar el carrito si la compra es exitosa
+            localStorage.removeItem("carrito");
+            alert("Compra finalizada exitosamente.");
+        }
+
+
+    </script>
     <div class="container mt-5">
         <!-- Barra de Progreso de Pasos -->
         <div class="progress-container mb-4">
@@ -69,14 +127,16 @@
                             <label class="form-check-label" for="yes-dietary">Sí</label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="dietary" id="no-dietary" value="no" checked>
+                            <input class="form-check-input" type="radio" name="dietary" id="no-dietary" value="no"
+                                checked>
                             <label class="form-check-label" for="no-dietary">No, gracias</label>
                         </div>
-                        <textarea class="form-control mt-3" id="dietary-instructions" rows="3" placeholder="Escribe tus instrucciones..." style="display: none;"></textarea>
+                        <textarea class="form-control mt-3" id="dietary-instructions" rows="3"
+                            placeholder="Escribe tus instrucciones..." style="display: none;"></textarea>
                     </div>
 
                     <!-- Botones de acción -->
-                    <button type="submit" class="btn btn-primary">Confirmar Pedido</button>
+                    <button type="submit" class="btn btn-primary" id="confirmar-pedido">Confirmar Pedido</button>
                     <a href="detallecarrito.html" class="btn btn-secondary">Ver Carrito</a>
                 </form>
             </div>
@@ -84,5 +144,7 @@
     </div>
 
     <script src="../js/procederpago.js"></script>
+   
 </body>
+
 </html>
