--- a/pages/pagocompletado.html
+++ b/pages/pagocompletado.html
@@ -6,12 +6,30 @@
     <title>Pago Exitoso</title>
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <link rel="stylesheet" href="../css/exito.css"> <!-- Estilos para la página de éxito -->
+    <link rel="icon" href="../images/piurano-logo.webp" type="image/x-icon" />
 </head>
 <body>
-    <div class="container text-center mt-5">
-        <h1>¡Pago Completado con Éxito!</h1>
-        <p>Gracias por tu pedido. Estamos preparando tu comida y te la enviaremos pronto.</p>
-        <a href="../index.html" class="btn btn-primary mt-4">Volver a la página principal</a>
+    <div class="d-flex justify-content-center align-items-center vh-100">
+        <div class="text-center">
+            <h1 class="text-success">¡Pago Completado con Éxito!</h1>
+            <p>Gracias por tu pedido. Estamos preparando tu comida y te la enviaremos pronto.</p>
+            <div class="mt-4">
+                <a href="../index.html" class="btn btn-primary">Volver a la página principal</a>
+            </div>
+        </div>
     </div>
+
+    <script>
+        // Limpiar el localStorage al llegar a esta página
+        window.onload = function() {
+            localStorage.clear();
+        };
+
+        // Prevenir que el usuario use el botón de "Atrás"
+        window.history.pushState(null, "", window.location.href);
+        window.onpopstate = function() {
+            window.location.href = "../index.html"; // Redirigir a la página principal si usa "Atrás"
+        };
+    </script>
 </body>
 </html>
