id confirmar-pedido

--- a/pages/procederpago.html
+++ b/pages/procederpago.html
@@ -111,7 +111,7 @@
                     <p class="mb-1">Contacto: <strong>987 654 321</strong></p>
                     <p class="mb-1">Total a Pagar: <strong>S/. 99.99</strong></p>                    
                 </div>
-                <button type="submit" class="btn btn-primary btn-block mt-4">Confirmar Pedido</button>
+                <button type="submit" class="btn btn-primary btn-block mt-4" id="confirmar-pedido">Confirmar Pedido</button>
                 <a href="detallecarrito.html" class="btn btn-secondary btn-block mt-2">Ver Carrito</a>
             </div>
             </form>
