--- a/pages/detallecarrito.html
+++ b/pages/detallecarrito.html
@@ -9,6 +9,18 @@
     <link rel="icon" href="../images/piurano-logo.webp" type="image/x-icon" />
 </head>
 <body>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-VGHCBZG439");
+  </script>
     <div class="container mt-5">
         <div class="row">
             <!-- Columna de productos -->
