--- a/pages/pagocompletado.html
+++ b/pages/pagocompletado.html
@@ -9,6 +9,18 @@
     <link rel="icon" href="../images/piurano-logo.webp" type="image/x-icon" />
 </head>
 <body>
+    <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
+
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag("js", new Date());
+
+    gtag("config", "G-VGHCBZG439");
+  </script>
     <div class="d-flex justify-content-center align-items-center vh-100">
         <div class="text-center">
             <h1 class="text-success">¡Pago Completado con Éxito!</h1>
