agregando etiquetasa nuevas1

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   <!-- End Google Tag Manager (noscript) -->
 
 
-  
+
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-VGHCBZG439"></script>
 
@@ -873,7 +873,7 @@
         </div>
 
         <div class="col-md mb-5 ftco-animate">
-          <form action="" method="post">
+          <form action="" method="post" id="contactos_id">
             <div class="form-group">
               <label for="name" class="sr-only">Name</label>
               <input type="text" class="form-control" id="name" placeholder="Escribe tu nombre" />
