agregando etiquetas reservas

--- a/index.html
+++ b/index.html
@@ -961,7 +961,7 @@
                 <small>CLOSE </small><span aria-hidden="true">&times;</span>
               </button>
               <h1 class="mb-4">Reserve A Table</h1>
-              <form action="#" method="post">
+              <form action="#" method="post" id="reservas">
                 <div class="row">
                   <div class="col-md-6 form-group">
                     <label for="m_fname">First Name</label>
