--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                     camote y cancha serrana.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche Clásico">
                     Agregar al carrito
                   </button>
                 </div>
@@ -224,7 +224,7 @@
                     cancha.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche Mixto">
                     Agregar al carrito
                   </button>
                 </div>
@@ -244,7 +244,7 @@
                     Conchas negras frescas del norte de Perú, marinadas con
                     limón, ají, cebolla y cilantro.
                   </p>
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche de Conchas Negras">
                     Agregar al carrito
                   </button>
                 </div>
@@ -265,7 +265,7 @@
                     acompañado de cebolla morada, ají y cilantro. Servido con
                     choclo y camote.
                   </p>
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" id="Ceviche de Camarones">
                     Agregar al carrito
                   </button>
                 </div>
@@ -280,14 +280,14 @@
                     <del>S/ 44.00</del>
                     <span class="text-primary">S/ 36.00</span>
                   </h5>
-                  <h5 class="mt-0 h4">Ceviche Tropical</h5>
+                  <h5 class="mt-0 h4" >Ceviche Tropical</h5>
                   <p class="mb-4">
                     Pescado fresco marinado en una mezcla de jugo de limón y
                     frutas tropicales como el mango y maracuyá, con un toque
                     de ají y cilantro.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" name="Ceviche Tropical">
                     Agregar al carrito
                   </button>
                 </div>
@@ -309,7 +309,7 @@
                     acompañado de ajonjolí y cilantro.
                   </p>
 
-                  <button class="btn btn-sm btn-warning ml-3">
+                  <button class="btn btn-sm btn-warning ml-3" name="Ceviche Nikkei">
                     Agregar al carrito
                   </button>
                 </div>
